force-app/main/default/objects/Dealer_Order_Item__c/Dealer_Order_Item__c.object-meta.xml
<CustomObject>
    <description>Individual battery products included in a VoltCore dealer order.</description>
    <label>Dealer Order Item</label>
    <nameField><displayFormat>SF-DOI-{000000}</displayFormat><label>Order Item Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Dealer Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>