force-app/main/default/objects/Dealer_Order_Item__c/fields/Battery_Product__c.field-meta.xml
<CustomField>
    <fullName>Battery_Product__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Battery Product</label>
    <referenceTo>Product2</referenceTo><relationshipLabel>Dealer Order Items</relationshipLabel>
    <relationshipName>Dealer_Order_Items</relationshipName><required>false</required><type>Lookup</type>
</CustomField>