force-app/main/default/objects/Dealer_Order_Item__c/fields/Dealer_Order__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order__c</fullName><label>Dealer Order</label><referenceTo>Dealer_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel><relationshipName>Order_Items</relationshipName>
<type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead>
</CustomField>