force-app/main/default/objects/Dealer_Order_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName><label>Line Total</label><precision>12</precision><required>false</required><scale>2</scale><type>Currency</type>
</CustomField>