force-app/main/default/objects/Dealer_Order_Item__c/fields/Portal_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Portal_Created_At__c</fullName><label>Portal Created At</label><required>false</required><type>DateTime</type>
</CustomField>