force-app/main/default/objects/Dealer_Order_Item__c/fields/Portal_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Order_Item_Id__c</fullName><externalId>true</externalId><label>Portal Order Item ID</label>
    <precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>true</unique>
</CustomField>