force-app/main/default/objects/Dealer_Order_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName><label>Product Code</label><length>50</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>