force-app/main/default/objects/Dealer_Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName><label>Product Name</label><length>150</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>