force-app/main/default/objects/Dealer_Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName><label>Quantity</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type>
</CustomField>