force-app/main/default/objects/Dealer_Order_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName><label>Unit Price</label><precision>12</precision><required>false</required><scale>2</scale><type>Currency</type>
</CustomField>